km/dev - submit

--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "install:clean": "rm -rf node_modules/ && rm -rf package-lock.json && npm install && npm start",
     "compile:scss": "sass src/assets/scss/argon-dashboard-react.scss src/assets/css/argon-dashboard-react.css",
     "minify:scss": "sass src/assets/scss/argon-dashboard-react.scss src/assets/css/argon-dashboard-react.min.css --style compressed",
@@ -37,6 +39,7 @@
     "chart.js": "2.9.4",
     "classnames": "2.3.2",
     "firebase": "^10.10.0",
+    "gh-pages": "^6.1.1",
     "moment": "2.29.4",
     "nouislider": "15.4.0",
     "react": "18.2.0",
